--- a/Vivarium.css
+++ b/Vivarium.css
@@ -1,3 +1,7 @@
+.VivariumContainer {
+	position: relative;
+}
+
 .VivariumCanvas {
 	background: black;
 	display: block;
@@ -19,7 +23,15 @@
 }
 
 .VivariumGenerationCounter {
-	float: right;
-	line-height: 16px;
-	padding: 5px;
+	color: white;
+	font-size: small;
+	position: absolute;
+	top: 5px; left: 5px;
+}
+
+.VivariumPopulationCounter {
+	color: white;
+	font-size: small;
+	position: absolute;
+	top: 20px; left: 5px;
 }
